Got external js working

--- a/js-practice.html
+++ b/js-practice.html
@@ -4,19 +4,21 @@
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>js-practice</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="js-practice.js"></script>
+
     <link href="JS-practice.css" rel="stylesheet" type="text/css" />
-    <script src="js-practice.js"</script>
+
 
 </head>
 
 
 
 <body>
-
     <div id="buttonContainerDiv"></div>
 
 </body>
-
+<body onload="makeLeftButtons()">
 </html>
