Made button function non-specific. And now mostly jquery.

--- a/js-practice.html
+++ b/js-practice.html
@@ -20,5 +20,5 @@
     <div id="buttonContainerDiv"></div>
 
 </body>
-<body onload="makeLeftButtons()">
+<body onload="makeButtonColumn(leftColumnTitles, 'btnTitleDiv', 'buttonDiv', 'buttonDiv', '#buttonContainerDiv')">
 </html>
