--- a/js-practice.html
+++ b/js-practice.html
@@ -2,23 +2,40 @@
 <html>
 
 <head>
-
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>js-practice</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Exo+2:400,300,500,600,700,200' rel='stylesheet' type='text/css'>
     <script src="js-practice.js"></script>
 
     <link href="JS-practice.css" rel="stylesheet" type="text/css" />
-
-
 </head>
 
-
-
 <body>
-    <div id="buttonContainerDiv"></div>
+   <div id='topBar'>
+    <div class="leftButtonContainer">
+        <div class='leftButton'>
+           &nbsp;
+        </div>
+    </div>
+       <div id='titleBar'>
+          <h1 class='titleBarText'>
+               This is the title bar
+            </h1>
+       </div>
+       <div class="rightButtonContainer">
+           <div class='rightButton'>
+               &nbsp;
+           </div>
+       </div>
+   </div>
+    <div id='mainWindow'>
+        <div id="leftButtonContainer" class="leftButtonContainer"></div>
+        <div id="rightButtonContainer" class="rightButtonContainer"></div>
+    </div>
 
 </body>
-<body onload="makeButtonColumn(leftColumnTitles, 'btnTitleDiv', 'buttonDiv', 'buttonDiv', '#buttonContainerDiv')">
+
 </html>
+
