Got panels working, with indicative content

--- a/js-practice.html
+++ b/js-practice.html
@@ -32,6 +32,17 @@
    </div>
     <div id='mainWindow'>
         <div id="leftButtonContainer" class="leftButtonContainer"></div>
+        <div class='leftPanel hidden'>
+            <h2>This is the left panel</h2>
+        </div>
+        <div class='rightPanel hidden'>
+            <h2>This is the right panel</h2>
+        </div>
+        <div id='viewPane'>
+            <h2>
+                This is the Viewpane
+            </h2>
+        </div>
         <div id="rightButtonContainer" class="rightButtonContainer"></div>
     </div>
 
