Started making indicator buttons

--- a/js-practice.html
+++ b/js-practice.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
    <div id='topBar'>
     <div class="leftButtonContainer">
         <div class='leftButton'>
@@ -30,6 +31,7 @@
            </div>
        </div>
    </div>
+
     <div id='mainWindow'>
         <div id="leftButtonContainer" class="leftButtonContainer"></div>
         <div class='leftPanel hidden'>
@@ -43,6 +45,7 @@
                 This is the Viewpane
             </h2>
         </div>
+        <div id='indicatorButtonContainer' class='indicatorButtonContainer'></div>
         <div id="rightButtonContainer" class="rightButtonContainer"></div>
     </div>
 
