Continuing with indicator buttons.

--- a/js-practice.html
+++ b/js-practice.html
@@ -25,8 +25,8 @@
                This is the title bar
             </h1>
        </div>
-       <div class="rightButtonContainer">
-           <div class='rightButton'>
+       <div class="rightButtonContainer" id='topRightButtonContainer'>
+           <div class='rightButton' style='width: 100%'>
                &nbsp;
            </div>
        </div>
